--- a/index.html
+++ b/index.html
@@ -13,20 +13,29 @@
   </head>
   <body>
     <header>
+      <div class="header__date">
+        <!-- day/ gregorian/ hebrew  -->
+      </div>
       <div class="banner">
         <h1 class="banner-title">צימר הבקתה - מושב רמות</h1>
         <a href="https://www.zimer-habikta.co.il/" class="banner-btn">קישור</a>
       </div>
     </header>
     <main class="container">
+      <!-- track start -->
       <div class="track_container">
-        <h1 class="track_title">מג'רסה</h1>
+        <h1 class="track_title">
+          <a
+            href="https://www.tiuli.com/tracks/21/%D7%9E%D7%92-%D7%A8%D7%A1%D7%94-%D7%91%D7%A7%D7%A2%D7%AA-%D7%91%D7%99%D7%AA-%D7%A6%D7%99%D7%93%D7%94"
+            >שמורת טבע מג'רסה</a
+          >
+        </h1>
         <div class="track_link track_link_container">
-          <div>קישור לאתר</div>
+          <div>קישור לתשלום כניסה</div>
           <div>
             <a
               href="https://www.parks.org.il/reserve-park/%D7%A9%D7%9E%D7%95%D7%A8%D7%AA-%D7%94%D7%98%D7%91%D7%A2-%D7%9E%D7%92%D7%A8%D7%A1%D7%94-%D7%94%D7%91%D7%98%D7%99%D7%97%D7%94-%D7%91%D7%A7%D7%A2%D7%AA-%D7%91%D7%99%D7%AA-%D7%A6%D7%99%D7%99/"
-              >שמורת טבע מג'רסה</a
+              >מג'רסה - רשות הטבע והגנים</a
             >
           </div>
         </div>
@@ -39,6 +48,29 @@
         ></iframe>
         <div class="seperator"></div>
       </div>
+      <!-- track end -->
+      <!-- track start -->
+      <div class="track_container">
+        <h1 class="track_title">
+          <a href="https://www.rafting.co.il/">רפטינג נהר הירדן</a>
+        </h1>
+        <div class="track_link track_link_container">
+          <div>קישור לתשלום כניסה</div>
+          <div>
+            <a href="https://www.rafting.co.il/">רמפטינג נהר הירדן</a>
+          </div>
+        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d26809.888879965743!2d35.67221558496278!3d32.86547182736318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x151c10a573d50b03%3A0xac5f3dbaac72bcb!2z16jXnteV16o!3m2!1d32.850365!2d35.665245!4m5!1s0x151c1a4d802367c5%3A0x3e22be6750772b89!2z16nXnteV16jXqiDXmNeR16Ig157XkifXqNeh15Q!3m2!1d32.885841!2d35.640993!5e0!3m2!1siw!2sil!4v1664058090056!5m2!1siw!2sil"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+        <div class="seperator"></div>
+      </div>
+      <!-- track end -->
+      <!-- track start -->
       <div class="track_container">
         <h1 class="track_title">רפטינג נהר הירדן</h1>
         <div class="track_link track_link_container">
