--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <!-- day/ gregorian/ hebrew  -->
       </div>
       <div class="banner">
-        <h1 class="banner-title">צימר הבקתה - מושב רמות</h1>
+        <h1 class="banner-title">
+          <p>צימר הבקתה</p>
+          <p>מושב רמות</p>
+        </h1>
         <a href="https://www.zimer-habikta.co.il/" class="banner-btn">קישור</a>
       </div>
     </header>
