--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- header start-->
     <header>
       <div class="header__date">
         <!-- day/ gregorian/ hebrew  -->
@@ -24,11 +25,22 @@
         <a href="https://www.zimer-habikta.co.il/" class="banner-btn">קישור</a>
       </div>
     </header>
+    <!-- header end-->
+    <!-- main start -->
     <main class="container">
       <!-- track start 11-9-2022-->
       <div class="track_container">
         <h2 class="track_date">יום שלישי 11-9-2022</h2>
-        <h1 class="track_title">
+        <ul>
+          <li>ניר דוד + גן השלושה (סחנה)</li>
+          <li>ניר דוד - נחל האסי נחל עמל</li>
+          <li>עמק המעיינות / פארק המעיינות</li>
+          <li>מפלים הלבנים - בית שאן</li>
+          <li>עין הנציב</li>
+          <li>עין שוקק</li>
+          <li>נחל הקיבוצים</li>
+        </ul>
+        <!-- <h1 class="track_title">
           <a href="">פתוח לדיון</a>
         </h1>
         <div class="track_link track_link_container">
@@ -36,7 +48,7 @@
           <div>
             <a href="">פתוח לדיון</a>
           </div>
-        </div>
+        </div> -->
         <div class="seperator"></div>
       </div>
       <!-- track end 11-9-2022-->
@@ -89,6 +101,7 @@
       </div>
       <!-- track end -->
     </main>
+    <!-- main end -->
     <script src="app.js"></script>
   </body>
 </html>
