--- a/index.html
+++ b/index.html
@@ -40,66 +40,33 @@
           <li>עין שוקק</li>
           <li>נחל הקיבוצים</li>
         </ul>
-        <!-- <h1 class="track_title">
-          <a href="">פתוח לדיון</a>
-        </h1>
-        <div class="track_link track_link_container">
-          <div>פתוח לדיון</div>
-          <div>
-            <a href="">פתוח לדיון</a>
-          </div>
-        </div> -->
         <div class="seperator"></div>
       </div>
       <!-- track end 11-9-2022-->
       <!-- track start 12-9-2022-->
       <div class="track_container">
         <h2 class="track_date">יום רביעי 12-9-2022</h2>
-        <h1 class="track_title">
-          <a
-            href="https://www.tiuli.com/tracks/21/%D7%9E%D7%92-%D7%A8%D7%A1%D7%94-%D7%91%D7%A7%D7%A2%D7%AA-%D7%91%D7%99%D7%AA-%D7%A6%D7%99%D7%93%D7%94"
-            >שמורת טבע מג'רסה</a
-          >
-        </h1>
-        <div class="track_link track_link_container">
-          <div>קישור לתשלום כניסה</div>
-          <div>
+        <ul>
+          <li>
             <a
-              href="https://www.parks.org.il/reserve-park/%D7%A9%D7%9E%D7%95%D7%A8%D7%AA-%D7%94%D7%98%D7%91%D7%A2-%D7%9E%D7%92%D7%A8%D7%A1%D7%94-%D7%94%D7%91%D7%98%D7%99%D7%97%D7%94-%D7%91%D7%A7%D7%A2%D7%AA-%D7%91%D7%99%D7%AA-%D7%A6%D7%99%D7%99/"
-              >מג'רסה - רשות הטבע והגנים</a
+              href="https://www.tiuli.com/tracks/21/%D7%9E%D7%92-%D7%A8%D7%A1%D7%94-%D7%91%D7%A7%D7%A2%D7%AA-%D7%91%D7%99%D7%AA-%D7%A6%D7%99%D7%93%D7%94"
+              >שמורת טבע מג'רסה</a
             >
-          </div>
-        </div>
-        <!-- <div class="seperator"></div> -->
-      </div>
-      <div class="track_container">
-        <h1 class="track_title">
-          <a href="https://www.rafting.co.il/">רפטינג נהר הירדן</a>
-        </h1>
-        <div class="track_link track_link_container">
-          <div>קישור לתשלום כניסה</div>
-          <div>
-            <a href="https://www.rafting.co.il/">רמפטינג נהר הירדן</a>
-          </div>
-        </div>
+          </li>
+          <li><a href="https://www.rafting.co.il/">רפטינג נהר הירדן</a></li>
+        </ul>
         <div class="seperator"></div>
       </div>
-      <!-- track end -->
-      <!-- track start -->
+      <!-- track end 12-9-2022-->
+      <!-- track start 13-9-2022-->
       <div class="track_container">
         <h2 class="track_date">יום חמישי 13-9-2022</h2>
-        <h1 class="track_title">
-          <a href="">לדיון</a>
-        </h1>
-        <div class="track_link track_link_container">
-          <div>פתוח לדיון</div>
-          <div>
-            <a href="">לדיון</a>
-          </div>
-        </div>
+        <ul>
+          <li>חזרה</li>
+        </ul>
         <div class="seperator"></div>
       </div>
-      <!-- track end -->
+      <!-- track end 13-9-2022-->
     </main>
     <!-- main end -->
     <script src="app.js"></script>
