--- a/index.html
+++ b/index.html
@@ -32,13 +32,34 @@
       <div class="track_container">
         <h2 class="track_date">יום שלישי 11-9-2022</h2>
         <ul>
-          <li>ניר דוד + גן השלושה (סחנה)</li>
-          <li>ניר דוד - נחל האסי נחל עמל</li>
-          <li>עמק המעיינות / פארק המעיינות</li>
-          <li>מפלים הלבנים - בית שאן</li>
-          <li>עין הנציב</li>
-          <li>עין שוקק</li>
-          <li>נחל הקיבוצים</li>
+          <li>כל המעינות שכאן , נמצאים כולם באזור בית שאן והגלבוע</li>
+          <li><a href="https://nelech.co.il/tag/maayanot_emek_maayanot/">קישור שכולל את כל עמק המעיינות</a></li>
+          <li>
+            <a
+              href="https://www.parks.org.il/reserve-park/%D7%92%D7%9F-%D7%9C%D7%90%D7%95%D7%9E%D7%99-%D7%92%D7%9F-%D7%94%D7%A9%D7%9C%D7%95%D7%A9%D7%94-%D7%94%D7%A1%D7%97%D7%A0%D7%94/"
+              >גן השלושה (סחנה) - כניסה בתשלום</a
+            >
+          </li>
+          <li><a href="">נחל האסי נחל עמל</a></li>
+          <li>
+            <a
+              href="https://www.tiuli.com/points-of-interest/594/%D7%94%D7%9E%D7%A4%D7%9C%D7%99%D7%9D-%D7%94%D7%9C%D7%91%D7%A0%D7%99%D7%9D-%D7%9C%D7%99%D7%93-%D7%A2%D7%99%D7%9F-%D7%94%D7%A0%D7%A6%D7%99%D7%91"
+              >מפלים הלבנים</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.tiuli.com/points-of-interest/153/%D7%A2%D7%99%D7%9F-%D7%94%D7%A0%D7%A6%D7%99%D7%91-%D7%A2%D7%99%D7%9F-%D7%99%D7%94%D7%95%D7%93%D7%94"
+            >
+              עין הנציב</a
+            >
+          </li>
+          <li><a href="https://www.tiuli.com/points-of-interest/272/%D7%A2%D7%99%D7%9F-%D7%A9%D7%95%D7%A7%D7%A7">עין שוקק</a></li>
+          <li>
+            <a href="https://www.tiuli.com/points-of-interest/273/%D7%A0%D7%97%D7%9C-%D7%94%D7%A7%D7%99%D7%91%D7%95%D7%A6%D7%99%D7%9D"
+              >נחל הקיבוצים</a
+            >
+          </li>
         </ul>
         <div class="seperator"></div>
       </div>
