--- a/index.html
+++ b/index.html
@@ -31,16 +31,10 @@
       <!-- track start 11-9-2022-->
       <div class="track_container">
         <h2 class="track_date">יום שלישי 11-9-2022</h2>
+        <h2>מסלולים אפשריים ליום זה (כולם באותו אזור)</h2>
         <ul>
-          <li>כל המעינות שכאן , נמצאים כולם באזור בית שאן והגלבוע</li>
-          <li><a href="https://nelech.co.il/tag/maayanot_emek_maayanot/">קישור שכולל את כל עמק המעיינות</a></li>
-          <li>
-            <a
-              href="https://www.parks.org.il/reserve-park/%D7%92%D7%9F-%D7%9C%D7%90%D7%95%D7%9E%D7%99-%D7%92%D7%9F-%D7%94%D7%A9%D7%9C%D7%95%D7%A9%D7%94-%D7%94%D7%A1%D7%97%D7%A0%D7%94/"
-              >גן השלושה (סחנה) - כניסה בתשלום</a
-            >
-          </li>
-          <li><a href="">נחל האסי נחל עמל</a></li>
+          <li>יציאה מבאר שבע ב 7:00 (עקב פקקים)</li>
+          <li>ארוחת צהריים להכין מראש</li>
           <li>
             <a
               href="https://www.tiuli.com/points-of-interest/594/%D7%94%D7%9E%D7%A4%D7%9C%D7%99%D7%9D-%D7%94%D7%9C%D7%91%D7%A0%D7%99%D7%9D-%D7%9C%D7%99%D7%93-%D7%A2%D7%99%D7%9F-%D7%94%D7%A0%D7%A6%D7%99%D7%91"
@@ -60,6 +54,7 @@
               >נחל הקיבוצים</a
             >
           </li>
+          <li>אפשרויות ארוחת ערב : טבריה או מסעדה הבקתה</li>
         </ul>
         <div class="seperator"></div>
       </div>
@@ -68,13 +63,16 @@
       <div class="track_container">
         <h2 class="track_date">יום רביעי 12-9-2022</h2>
         <ul>
+          <li>ארוחת בוקר בבקתה - כל אחד לפי טעם של הילדים שלו</li>
           <li>
             <a
               href="https://www.tiuli.com/tracks/21/%D7%9E%D7%92-%D7%A8%D7%A1%D7%94-%D7%91%D7%A7%D7%A2%D7%AA-%D7%91%D7%99%D7%AA-%D7%A6%D7%99%D7%93%D7%94"
               >שמורת טבע מג'רסה</a
             >
           </li>
-          <li><a href="https://www.rafting.co.il/">רפטינג נהר הירדן</a></li>
+          <li>ארוחת צהריים - אפשר בטבריה זה בדרך לפארק המים</li>
+          <li><a href="https://www.aquakef.com/%d7%a4%d7%90%d7%a8%d7%a7-%d7%94%d7%9e%d7%99%d7%9d-3/"> Aqua Kef פארק מים</a></li>
+          <li>אפשרויות ארוחת ערב : טבריה או מסעדה הבקתה</li>
         </ul>
         <div class="seperator"></div>
       </div>
@@ -83,7 +81,17 @@
       <div class="track_container">
         <h2 class="track_date">יום חמישי 13-9-2022</h2>
         <ul>
-          <li>חזרה</li>
+          <li>ארוחת בוקר בבקתה - כל אחד לפי טעם של הילדים שלו</li>
+          <h2>מסלולים אפשריים ליום זה (כולם באותו אזור)</h2>
+          <li>כל המעינות שכאן , נמצאים כולם באזור בית שאן והגלבוע</li>
+          <li><a href="https://nelech.co.il/tag/maayanot_emek_maayanot/">קישור שכולל את כל עמק המעיינות</a></li>
+          <li>
+            <a
+              href="https://www.parks.org.il/reserve-park/%D7%92%D7%9F-%D7%9C%D7%90%D7%95%D7%9E%D7%99-%D7%92%D7%9F-%D7%94%D7%A9%D7%9C%D7%95%D7%A9%D7%94-%D7%94%D7%A1%D7%97%D7%A0%D7%94/"
+              >גן השלושה (סחנה) - כניסה בתשלום</a
+            >
+          </li>
+          <li><a href="">נחל האסי נחל עמל</a></li>
         </ul>
         <div class="seperator"></div>
       </div>
