--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <!-- track start 11-9-2022-->
       <div class="track_container">
         <h2 class="track_date">יום שלישי 11-9-2022</h2>
-        <h2>מסלולים אפשריים ליום זה (כולם באותו אזור)</h2>
         <ul>
+          <li>מסלולים אפשריים ליום זה (כולם באותו אזור)</li>
           <li>יציאה מבאר שבע ב 7:00 (עקב פקקים)</li>
           <li>ארוחת צהריים להכין מראש</li>
           <li>
@@ -82,7 +82,7 @@
         <h2 class="track_date">יום חמישי 13-9-2022</h2>
         <ul>
           <li>ארוחת בוקר בבקתה - כל אחד לפי טעם של הילדים שלו</li>
-          <h2>מסלולים אפשריים ליום זה (כולם באותו אזור)</h2>
+          <li>מסלולים אפשריים ליום זה (כולם באותו אזור)</li>
           <li>כל המעינות שכאן , נמצאים כולם באזור בית שאן והגלבוע</li>
           <li><a href="https://nelech.co.il/tag/maayanot_emek_maayanot/">קישור שכולל את כל עמק המעיינות</a></li>
           <li>
