--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <ul>
           <li>מסלולים אפשריים ליום זה (כולם באותו אזור)</li>
           <li>יציאה מבאר שבע ב 7:00 (עקב פקקים)</li>
+          <li>יציאה מחולון ב 8:00 (עקב פקקים)</li>
           <li>ארוחת צהריים להכין מראש</li>
           <li>
             <a
