--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               >נחל הקיבוצים</a
             >
           </li>
+          <li>להתקפל בסביבות 16:30 בערך. נסיעה לצימר אורכת כשעה, בדרך נוכל לעצור בסופר ויקטוריה בצמח (ממש על הדרך) בשביל לקנות מוצרים</li>
           <li>אפשרויות ארוחת ערב : טבריה או מסעדה הבקתה</li>
         </ul>
         <div class="seperator"></div>
@@ -64,7 +65,7 @@
       <div class="track_container">
         <h2 class="track_date">יום רביעי 12-9-2022</h2>
         <ul>
-          <li>ארוחת בוקר בבקתה - כל אחד לפי טעם של הילדים שלו</li>
+          <li>ארוחת בוקר בבקתה - כל אחד לפי טעם של הילדים שלו. טוסטים כריכים מעדנים וכן הלאה...</li>
           <li>
             <a
               href="https://www.tiuli.com/tracks/21/%D7%9E%D7%92-%D7%A8%D7%A1%D7%94-%D7%91%D7%A7%D7%A2%D7%AA-%D7%91%D7%99%D7%AA-%D7%A6%D7%99%D7%93%D7%94"
@@ -82,7 +83,8 @@
       <div class="track_container">
         <h2 class="track_date">יום חמישי 13-9-2022</h2>
         <ul>
-          <li>ארוחת בוקר בבקתה - כל אחד לפי טעם של הילדים שלו</li>
+          <li>ארוחת בוקר בבקתה - כל אחד לפי טעם של הילדים שלו. טוסטים כריכים מעדנים וכן הלאה...</li>
+
           <li>מסלולים אפשריים ליום זה (כולם באותו אזור)</li>
           <li>כל המעינות שכאן , נמצאים כולם באזור בית שאן והגלבוע</li>
           <li><a href="https://nelech.co.il/tag/maayanot_emek_maayanot/">קישור שכולל את כל עמק המעיינות</a></li>
