--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li>מסלולים אפשריים ליום זה (כולם באותו אזור)</li>
           <li>יציאה מבאר שבע ב 7:00 (עקב פקקים)</li>
           <li>יציאה מחולון ב 8:00 (עקב פקקים)</li>
-          <li>ארוחת צהריים להכין מראש</li>
+          <li>ארוחת צהריים ליום זה להכין מראש, כריכים צידניות חטיפים וכן הלאה</li>
           <li>
             <a
               href="https://www.tiuli.com/points-of-interest/594/%D7%94%D7%9E%D7%A4%D7%9C%D7%99%D7%9D-%D7%94%D7%9C%D7%91%D7%A0%D7%99%D7%9D-%D7%9C%D7%99%D7%93-%D7%A2%D7%99%D7%9F-%D7%94%D7%A0%D7%A6%D7%99%D7%91"
